--- a/config/config.ini
+++ b/config/config.ini
@@ -1,5 +1,5 @@
 ujh=123
 asd=123
-logger_dir="/var/fast_cpp_server/logs/"
-app_name="fast_cpp_server"
-config_dir="/etc/fast_cpp_server/config/"
+logger_dir=/var/fast_cpp_server/logs/
+app_name=fast_cpp_server
+config_dir=/etc/fast_cpp_server/config/
